# task-management-api

./: .env.example  .gitignore  README.md  alembic.ini  main.py  pyproject.toml
app/: crud.py  domain.py  main.py  models.py
app/api/: deps.py  main.py  params.py
app/api/routes/: login.py  projects.py  tasks.py  users.py
app/core/: config.py  db.py  security.py
app/migrations/: env.py  script.py.mako
app/migrations/versions/: 4c7bb7fb6b7b_initial_migration.py
app/models/: __init__.py  projects.py  tasks.py  users.py  utils.py
tests/: conftest.py  utils.py
tests/api/routes/: test_login.py  test_task.py
tests/crud/: test_user.py
